Fix possible deadlock during shutdown by not using the FILE thread.

The leveldb service needs to be able to call code in the file service,
even during browser shutdown. If the file service runs on the file
thread, this will fail, leading to deadlock/timeout. Instead move
the file service to a new SingleThreadTaskRunner managed by the task
scheduler.

Also re-enable tests that hopefully should be fixed by this.

BUG=712872
BUG=586194

Review-Url: https://codereview.chromium.org/2852333004
Cr-Commit-Position: refs/heads/master@{#470169}

Former-commit-id: 17399e67ce617b8936b5088dba92abb92b0cb8ee